Small fixes found from coverage analysis.
* Unified both summary arc analyzers
* Deleted unused code.
* Converted checks into assertions
* Removed some bad patterns, including a possible bug in BinaryExpr handling.